--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,20 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+}
+.preview {
+  width: auto;
+  margin-bottom: 25px;
+  padding: 5px;
+  border: 1px solid;
+}
+img {
+  max-width: 350px;
+}
+textarea {
+  margin-top: 25px;
+  width: 740px;
+  height: 400px;
+  border: 1px solid;
+  resize:none;
 }
