--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #DDCAD9;
 }
 .preview {
   width: auto;
   margin-bottom: 25px;
   padding: 5px;
-  border: 1px solid;
+  border: 1px solid #7C616C;
+  background-color: #E5E9EC;
+  border-radius: 6px;
 }
 img {
   max-width: 350px;
@@ -18,6 +21,17 @@ textarea {
   margin-top: 25px;
   width: 740px;
   height: 400px;
-  border: 1px solid;
+  border: 1px solid #7C616C;
   resize:none;
+  background-color: #E5E9EC;
+  border-radius: 6px;
+}
+
+textarea::-webkit-scrollbar {
+  width: 6px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  background-color: #D1B1CB;
 }
